--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -51,6 +51,48 @@
 <td>RegressionSuite SmokeSuite </td>
 </tr>
 <tr>
+<td>vtiger.OrganisationTest.CreateOrganisationTesting</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createOrgnisationTesting</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bcConfig</td>
+<td>RegressionSuite SmokeSuite </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bmConfig</td>
+<td>RegressionSuite SmokeSuite </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>amConfig</td>
+<td>RegressionSuite SmokeSuite </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>acConfig</td>
+<td>RegressionSuite SmokeSuite </td>
+</tr>
+<tr>
 <td>vtiger.ContactsTests.CreateContactTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
